TEIID-2390 minor cleanups